ajustei position footer

--- a/cardapio.html
+++ b/cardapio.html
@@ -799,8 +799,7 @@
   </main>
 
 
-  <footer style="position:absolute;
-  bottom: -550vh;">
+  <footer style="position:auto">
     <nav>
       <ul>
         <li class="traco"><a href="#">Sobre nós</a></li>
