--- a/cardapio.html
+++ b/cardapio.html
@@ -29,7 +29,7 @@
         <a class="link_logo" href="#top"><img class="logo" src="logos/logo6.png" alt="logo_leilabolos" /></a>
       </li>
       <li>
-        <img class="logo" src="logos/Bolos da Leila.png" style="width: 22rem;" alt="logo_leilabolos" />
+        <a href="index.html"><img class="logo" src="logos/Bolos da Leila.png" style="width: 22rem;" alt="logo_leilabolos" /></a>
       </li>
       <li></li>
       <li></li>
