--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </div>
     <ul class="menu" style="position: fixed; left: 2rem; z-index: 99;">
       <li> <a class="link_logo" href="#top"><img class="logo" src="logos/logo6.png" alt="logo_leilabolos" /></a></li>
-      <li> <img class="logo" src="logos/Bolos da Leila.png" style="width: 22rem;" alt="logo_leilabolos" /></li>
+      <li> <a href="index.html"><img class="logo" src="logos/Bolos da Leila.png" style="width: 22rem;"
+            alt="logo_leilabolos" /></a></li>
       <li></li>
       <li></li>
       <li><a href="historia.html">História</a></li>
@@ -114,7 +115,7 @@
 
     <section id="produtos_pai">
       <div class="sobre_produtos_filho">
-        <h2>Produtos</h2>
+        <h2 class="titulo_sobre" >Produtos</h2>
         <p>Lorem ipsum dolor, Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni aperiam ipsa quis repellat
           cum obcaecati nulla quas qui rem sunt quia quam nemo amet porro eaque accusantium, eos Lorem ipsum dolor sit
           amet consectetur adipisicing elit. Accusantium labore neque animi deserunt. Quae delectus doloribus maxime
@@ -126,7 +127,7 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit consequatur placeat incidunt, quos recusandae
           pariatur aperiam perspiciatis officia! Maiores quasi sequi animi nam omnis maxime dicta incidunt nemo
           similique nesciunt?</p>
-        <a class="button" href="cardapio.html">Cardapio</a>
+        <a class="button" href="cardapio.html">Cardápio</a>
       </div>
       <div class="img_produtos_filho">
         <a href="#"><img src="banners/bolos.jpg" alt="bolos"></a>
@@ -151,8 +152,8 @@
         <li><img class="patrocinador" src="icone/local.png" alt="icone_mapa"></li>
         <li><img class="patrocinador" src="icone/whatsapp.png" alt="icone_whatsapp"></li>
         <li><img class="patrocinador" src="icone/envelope.png" alt="logo_envelope"></li>
-        <li><a href="https://www.instagram.com/leilaabolos/" target="_blank" ><img class="patrocinador" src="icone/instagram.png"
-              alt="instagram"></a></li>
+        <li><a href="https://www.instagram.com/leilaabolos/" target="_blank"><img class="patrocinador"
+              src="icone/instagram.png" alt="instagram"></a></li>
 
       </ul>
       <ul class="patrocinadores">
