--- a/base.html
+++ b/base.html
@@ -69,6 +69,23 @@
 
       </ul>
     </nav>
+
+    
+      <nav class="direcao_footer" >
+        <ul>
+          <li><a href="#">Horário de atendimento:
+              seg a sáb das 9h às 18h.</a></li>
+        </ul>
+  
+        <ul class="logos_footer">
+          <li><img class="logo_footer_filho" src="icone/local.png" alt="icone_mapa"></li>
+          <li><img class="logo_footer_filho" src="icone/whatsapp.png" alt="icone_whatsapp"></li>
+          <li><img class="logo_footer_filho" src="icone/envelope.png" alt="logo_envelope"></li>
+          <li><a href="https://www.instagram.com/leilaabolos/" target="_blank"><img class="logo_footer_filho"
+                src="icone/instagram.png" alt="instagram"></a></li>
+  
+        </ul>
+      </nav>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
