--- a/historia.html
+++ b/historia.html
@@ -63,22 +63,22 @@
     
   </main>
 
-  <footer style="position: fixed;
-  height: 22vh;">
-    <nav>
+  <footer>
+    <nav class="direcao_footer" >
       <ul>
-        <li class="traco"><a href="#">Sobre nós</a></li>
-        <li class="traco"><a href="#">Políticas de Privacidade</a></li>
-        <li class="traco"><a href="#">Fale Conosco</a></li>
-        <li class="traco"><a href="#">Termos de Uso</a></li>
-        <li class="traco" style="border-right: none;"><a href="#">Trabalhe conosco</a></li>
+        <li><a href="#">Horário de atendimento:
+            seg a sáb das 9h às 18h.</a></li>
       </ul>
-      <ul class="patrocinadores" >
-        <li><img class="patrocinador" src="icone/icone_ifood.png" alt=""></li>
-        <li><img class="patrocinador" src="icone/icone_rappi.png" alt=""></li>
+
+      <ul class="logos_footer">
+        <li><a href="contato.html"><img class="logo_footer_filho"
+              src="icone/local.png" alt="icone_mapa"></a></li>
+        <li><img class="logo_footer_filho" src="icone/whatsapp.png" alt="icone_whatsapp"></li>
+        <li><img class="logo_footer_filho" src="icone/envelope.png" alt="logo_envelope"></li>
+        <li><a href="https://www.instagram.com/leilaabolos/" target="_blank"><img class="logo_footer_filho"
+              src="icone/instagram.png" alt="instagram"></a></li>
 
       </ul>
-    </nav>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
