--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div></div>
       <div></div>
     </div>
-    <ul class="menu" style="position: fixed; left: 2rem; z-index: 99;">
+    <ul class="menu index_menu">
       <li> <a class="link_logo" href="#top"><img class="logo" src="logos/logo6.png" alt="logo_leilabolos" /></a></li>
       <li> <a href="index.html"><img class="logo" src="logos/Bolos da Leila.png" style="width: 22rem;"
             alt="logo_leilabolos" /></a></li>
@@ -68,7 +68,7 @@
             <a href="#" target="_blank">
               <div class="d-flex justify-content-center">
                 <div class="projeto">
-                  <h1>LEILA BOLOS</h1>
+                  <h1>frango frito</h1>
                 </div>
               </div>
             </a>
@@ -115,7 +115,7 @@
 
     <section id="produtos_pai">
       <div class="sobre_produtos_filho">
-        <h2 class="titulo_sobre" >Produtos</h2>
+        <h2 class="titulo_sobre">Produtos</h2>
         <p>Lorem ipsum dolor, Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni aperiam ipsa quis repellat
           cum obcaecati nulla quas qui rem sunt quia quam nemo amet porro eaque accusantium, eos Lorem ipsum dolor sit
           amet consectetur adipisicing elit. Accusantium labore neque animi deserunt. Quae delectus doloribus maxime
@@ -141,24 +141,19 @@
   </main>
 
   <footer>
-    <nav>
+    <nav class="direcao_footer" >
       <ul>
-        <li class="traco"><a href="#">Sobre nós</a></li>
-        <li class="traco"><a href="#">Políticas de Privacidade</a></li>
-        <li class="traco" style="border-right: none;"><a href="#">Contato</a></li>
+        <li><a href="#">Horário de atendimento:
+            seg a sáb das 9h às 18h.</a></li>
       </ul>
 
-      <ul class="patrocinadores">
-        <li><img class="patrocinador" src="icone/local.png" alt="icone_mapa"></li>
-        <li><img class="patrocinador" src="icone/whatsapp.png" alt="icone_whatsapp"></li>
-        <li><img class="patrocinador" src="icone/envelope.png" alt="logo_envelope"></li>
-        <li><a href="https://www.instagram.com/leilaabolos/" target="_blank"><img class="patrocinador"
+      <ul class="logos_footer">
+        <li><a href="contato.html"><img class="logo_footer_filho"
+              src="icone/local.png" alt="icone_mapa"></a></li>
+        <li><img class="logo_footer_filho" src="icone/whatsapp.png" alt="icone_whatsapp"></li>
+        <li><img class="logo_footer_filho" src="icone/envelope.png" alt="logo_envelope"></li>
+        <li><a href="https://www.instagram.com/leilaabolos/" target="_blank"><img class="logo_footer_filho"
               src="icone/instagram.png" alt="instagram"></a></li>
-
-      </ul>
-      <ul class="patrocinadores">
-        <li><img class="patrocinador" src="icone/icone_ifood.png" alt="logo_ifood"></li>
-        <li><img class="patrocinador" src="icone/icone_rappi.png" alt="logo_rappi"></li>
 
       </ul>
     </nav>
