--- a/contato.html
+++ b/contato.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="estilos/style.css" />
-  <title> La Romana Pizzaria - Contato </title>
+  <title> Leila Bolos- Contato </title>
 </head>
 
-<body>
+<body class="icon-bg" >
   <header>
 
     <div class="hamburger">
@@ -49,26 +49,53 @@
       </div>
   </header>
 
-  <main>
-   
-    
-  </main>
+  <main style="overflow-x: hidden;">
+    <h1>Contato</h1>
+    <!-- Formulário de contato -->
+     <div class="pag-contato">
+     <div class="form-contato">
+      <h5>Faça a sua encomenda!</h5>
+      <form action="contato.php" method="POST">
+        <div>
+          <label for="nome">Nome</label>
+          <input type="text" name="nome" required/>
+        </div>
+        <div>
+          <label for="telefone">Telefone de contato</label>
+          <input type="text" name="telefone" required/>
+        </div>
+        <div>
+          <label for="Mensagem">Mensagem</label>
+          <textarea name="mensagem" required></textarea>
+        </div>
+        <input type="submit" value="Fazer pedido"/>    
+      </form>
+     </div>
+  
+      <div class="mapa">
+        <p>R. Maria Batista, 147<br>Jardim Neide, São Paulo</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14616.710092887077!2d-46.7440156!3d-23.6696087!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5186619a2137%3A0xa4a58de34407d9e3!2sBolo%20da%20Leila!5e0!3m2!1spt-BR!2sbr!4v1727673976205!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+      
+    </main>
 
   <footer>
-    <nav>
+    <nav class="direcao_footer" >
       <ul>
-        <li class="traco"><a href="#">Sobre a Pizza</a></li>
-        <li class="traco"><a href="#">Políticas de Privacidade</a></li>
-        <li class="traco"><a href="#">Fale Conosco</a></li>
-        <li class="traco"><a href="#">Termos de Uso</a></li>
-        <li class="traco" style="border-right: none;"><a href="#">Trabalhe conosco</a></li>
+        <li><a href="#">Horário de atendimento:
+            seg a sáb das 9h às 18h.</a></li>
       </ul>
-      <ul class="patrocinadores" >
-        <li><img class="patrocinador" src="icone/icone_ifood.png" alt=""></li>
-        <li><img class="patrocinador" src="icone/icone_rappi.png" alt=""></li>
+
+      <ul class="logos_footer">
+        <li><a href="contato.html"><img class="logo_footer_filho"
+              src="icone/local.png" alt="icone_mapa"></a></li>
+        <li><img class="logo_footer_filho" src="icone/whatsapp.png" alt="icone_whatsapp"></li>
+        <li><img class="logo_footer_filho" src="icone/envelope.png" alt="logo_envelope"></li>
+        <li><a href="https://www.instagram.com/leilaabolos/" target="_blank"><img class="logo_footer_filho"
+              src="icone/instagram.png" alt="instagram"></a></li>
 
       </ul>
-    </nav>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
