atualização de projeto

--- a/base.html
+++ b/base.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="estilos/style.css" />
-  <title> La Romana Pizzaria - #####BASE####### </title>
+  <title> ecommercer - #####BASE####### </title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
       <div></div>
     </div>
     <ul class="menu">
-      <li> <img class="logo" src="icone/la romana-Photoroom.png" alt="logo_la_romana" /></li>
+      <li> <img class="logo" src="icone/icone_rappi.png" alt="logo_" /></li>
       <li></li>
       <li></li>
       <li><a href="historia.html">História</a></li>
@@ -57,17 +57,13 @@
   <footer>
     <nav>
       <ul>
-        <li class="traco"><a href="#">Sobre a Pizza</a></li>
+        <li class="traco"><a href="#">Sobre</a></li>
         <li class="traco"><a href="#">Políticas de Privacidade</a></li>
         <li class="traco"><a href="#">Fale Conosco</a></li>
         <li class="traco"><a href="#">Termos de Uso</a></li>
         <li class="traco" style="border-right: none;"><a href="#">Trabalhe conosco</a></li>
       </ul>
-      <ul class="patrocinadores" >
-        <li><img class="patrocinador" src="icone/icone_ifood.png" alt=""></li>
-        <li><img class="patrocinador" src="icone/icone_rappi.png" alt=""></li>
-
-      </ul>
+     
     </nav>
 
     
